<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/AppTheme"
    android:orientation="vertical">

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/settings_dialog_enable_wallet_password_text1"
    android:textAppearance="@android:style/TextAppearance.Medium"
      android:id="@+id/textView13"
      android:layout_marginTop="36dp"
      android:layout_alignParentTop="true"
      android:layout_alignStart="@+id/textView15"
      android:layout_alignEnd="@+id/textView15" />

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/settings_dialog_enable_wallet_password_text2"
    android:paddingTop="8dp"
    android:textAppearance="@android:style/TextAppearance.Medium"
      android:layout_below="@+id/textView13"
      android:layout_alignParentStart="true"
      android:layout_marginTop="18dp"
      android:id="@+id/textView15"
      android:layout_marginEnd="30dp"
      android:layout_marginStart="30dp"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:id="@+id/password1"
      android:layout_marginTop="36dp"
      android:layout_alignTop="@+id/textView14"
      android:layout_alignParentStart="true"
      android:layout_marginEnd="30dp"
      android:layout_marginStart="30dp"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/settings_dialog_enable_wallet_password_text3"
    android:paddingTop="8dp"
    android:textAppearance="@android:style/TextAppearance.Medium"
      android:id="@+id/textView14"
      android:layout_marginTop="39dp"
      android:layout_below="@+id/password2"
      android:layout_alignParentStart="true"
      android:layout_marginEnd="30dp"
      android:layout_marginStart="30dp"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:inputType="textPassword"
    android:id="@+id/password2"
      android:layout_below="@+id/textView15"
      android:layout_alignParentStart="true"
      android:layout_marginEnd="30dp"
      android:layout_marginStart="30dp"/>

</RelativeLayout>